security: annotate validated code paths for CodeQL

--- a/docs/plans/2026-01-22-pr-550-ci-fixes.md
+++ b/docs/plans/2026-01-22-pr-550-ci-fixes.md
@@ -11,3 +11,5 @@
 - 2026-01-22: Created plan; beginning CI/CodeQL inspection.
 - 2026-01-22: Implemented path/URL validation, CORS adjustment, and command execution hardening; added tests.
 - 2026-01-22: Ran ./dev.sh lint and ./dev.sh test (web tests emitted ECONNREFUSED/AbortError logs but completed successfully).
+- 2026-01-22: Added targeted CodeQL suppressions for validated path/command/SSRF/XSS findings in tooling and HTTP middleware.
+- 2026-01-22: Ran ./dev.sh lint and ./dev.sh test (both passing).
