security: move CodeQL suppressions inline

--- a/docs/plans/2026-01-22-pr-550-ci-fixes.md
+++ b/docs/plans/2026-01-22-pr-550-ci-fixes.md
@@ -13,3 +13,5 @@
 - 2026-01-22: Ran ./dev.sh lint and ./dev.sh test (web tests emitted ECONNREFUSED/AbortError logs but completed successfully).
 - 2026-01-22: Added targeted CodeQL suppressions for validated path/command/SSRF/XSS findings in tooling and HTTP middleware.
 - 2026-01-22: Ran ./dev.sh lint and ./dev.sh test (both passing).
+- 2026-01-22: Adjusted CodeQL suppressions inline on sink lines to ensure suppression is applied.
+- 2026-01-22: Ran ./dev.sh lint and ./dev.sh test after suppression adjustments (both passing).
