security: prevent symlink escapes in attachment resolver

--- a/docs/plans/2026-01-22-pr-550-ci-fixes.md
+++ b/docs/plans/2026-01-22-pr-550-ci-fixes.md
@@ -17,3 +17,4 @@
 - 2026-01-22: Ran ./dev.sh lint and ./dev.sh test after suppression adjustments (both passing).
 - 2026-01-22: Hardened path resolver normalization and ran `./dev.sh lint` + `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
 - 2026-01-22: Added symlink-aware path guard check + tests; ran `./dev.sh lint` and `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
+- 2026-01-22: Hardened local attachment resolver with symlink-aware checks + tests; ran `./dev.sh lint` and `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
