--- a/docs/plans/2026-01-22-pr-550-ci-fixes.md
+++ b/docs/plans/2026-01-22-pr-550-ci-fixes.md
@@ -20,3 +20,4 @@
 - 2026-01-22: Hardened local attachment resolver with symlink-aware checks + tests; ran `./dev.sh lint` and `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
 - 2026-01-23: Added sanitizer-backed path resolution, rewrote find to avoid shelling out, and gated local bash/code execution behind the local_exec build tag; ran `./dev.sh lint` and `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
 - 2026-01-23: Reworked grep/ripgrep to Go-based searching, updated tests, and reran `./dev.sh lint` + `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
+- 2026-01-23: Inlined base/rel path checks in file tools to satisfy CodeQL taint analysis; ran `./dev.sh lint` and `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
