tools: centralize path containment in resolver

--- a/docs/plans/2026-01-22-pr-550-ci-fixes.md
+++ b/docs/plans/2026-01-22-pr-550-ci-fixes.md
@@ -21,3 +21,5 @@
 - 2026-01-23: Added sanitizer-backed path resolution, rewrote find to avoid shelling out, and gated local bash/code execution behind the local_exec build tag; ran `./dev.sh lint` and `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
 - 2026-01-23: Reworked grep/ripgrep to Go-based searching, updated tests, and reran `./dev.sh lint` + `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
 - 2026-01-23: Inlined base/rel path checks in file tools to satisfy CodeQL taint analysis; ran `./dev.sh lint` and `go test -race -covermode=atomic -coverprofile=coverage.out ./...`.
+- 2026-01-23: Plan to move path safety upstream (resolver + path guard) and refactor file tools to rely on resolveLocalPath for consistent containment and symlink checks.
+- 2026-01-23: Centralized containment in path guard (root clamp) and refactored list/read/write/edit tools to use resolveLocalPath; updated resolver + tests for root clamping.
